Exercicio 06/Sorteio-LaçoWhile

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch jogoSorteio",
+            "request": "launch",
+            "mainClass": "jogoSorteio",
+            "projectName": "Java_32f1b390"
+        },
+        {
+            "type": "java",
             "name": "Launch RecursiveFibonacci",
             "request": "launch",
             "mainClass": "RecursiveFibonacci",
